--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -87,7 +87,7 @@
                                            <span >[{{LANGUAGE_CODE}}]  </span>
 
                                         </a>
-                                        <a href="{% url 'themes:contrast'%}" style="margin-left:10px;"><i class="glyphicon glyphicon-adjust"></i></a>
+                                        <a href="" id = "contrast_button" style="margin-left:10px;"><i class="glyphicon glyphicon-adjust"></i></a>
                                         <ul class="dropdown-menu">
 
 
@@ -146,7 +146,19 @@
         </div>
     </div>
 
+<script type="text/javascript">
+    $("#contrast_button" ).click(function() {
+      if (Cookies.get('contrast_check')) {
+        Cookies.remove('contrast_check')
+        location.reload()
+      }
+      else {
+        Cookies.set('contrast_check','anonymous')
+        location.reload()
+      }
 
+    });
+</script>
 {% endblock%}
 
 {% block footer %}
