fixed missing part on base.html template

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -235,7 +235,7 @@
                             </a>
                         </li>
                         <li class="item" data-toggle="tooltip" data-placement="right" title="{% trans "Analytics" %}">
-                            <i class="fa fa-bar-chart" aria-hidden="true"></i>
+                            <a href="{% url 'analytics:view_general' %}"><i class="fa fa-bar-chart" aria-hid{% get_current_language as LANGUAGE_CODE %}den="true"></i></a> 
                         </li>
                     </ul>
                 {% endblock %}
@@ -290,7 +290,7 @@
                             </a>
                         </li>
                         <li class="item" data-toggle="tooltip" data-placement="top" title="{% trans "Analytics" %}">
-                            <i class="fa fa-bar-chart" aria-hid{% get_current_language as LANGUAGE_CODE %}den="true"></i>
+                            <a href="{% url 'analytics:view_general' %}"><i class="fa fa-bar-chart" aria-hid{% get_current_language as LANGUAGE_CODE %}den="true"></i></a> 
                         </li>
                     </ul>
                 </div>
