tag cloud is binding rectangle and texts but color scale is not working

--- a/analytics/static/analytics/general.sass
+++ b/analytics/static/analytics/general.sass
@@ -41,8 +41,11 @@
 	border-radius: 10px
 	color: #ffffff
 
-div.tag-cloud
+.tag-cloud
 	width: 10%
 	border-radius: 25px
 	color: #ffffff
-	background-color: #52b7bd
+	
+
+.tag-name
+	color: #ffffff
