--- a/analytics/static/analytics/general.css
+++ b/analytics/static/analytics/general.css
@@ -34,10 +34,12 @@
   border-radius: 10px;
   color: #ffffff; }
 
-div.tag-cloud {
+.tag-cloud {
   width: 10%;
   border-radius: 25px;
-  color: #ffffff;
-  background-color: #52b7bd; }
+  color: #ffffff; }
+
+.tag-name {
+  color: #ffffff; }
 
 /*# sourceMappingURL=general.css.map */
