Minor adjust in contrast script in login template

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -153,7 +153,7 @@
         location.reload()
       }
       else {
-        Cookies.set('contrast_check','anonymous')
+        Cookies.set('contrast_check','contrast')
         location.reload()
       }
 
