finished tag cloud, started styling most accessed left bottom lists

--- a/analytics/static/analytics/general.css
+++ b/analytics/static/analytics/general.css
@@ -34,12 +34,33 @@
   border-radius: 10px;
   color: #ffffff; }
 
+.data-container {
+  width: 80px;
+  height: 40px; }
+
 .tag-cloud {
-  width: 10%;
   border-radius: 25px;
-  color: #ffffff; }
+  color: #ffffff;
+  width: 80px; }
 
 .tag-name {
-  color: #ffffff; }
+  color: #ffffff;
+  font-size: 10px; }
+
+#left-data-selector {
+  background: linear-gradient(#0e8999, #6bf0ce);
+  width: 30%; }
+
+.middle-chart {
+  width: 30%;
+  float: left; }
+  .middle-chart h4 {
+    color: #009688; }
+
+.right-chart {
+  width: 30%;
+  float: left; }
+  .right-chart h4 {
+    color: #009688; }
 
 /*# sourceMappingURL=general.css.map */
