--- a/analytics/static/analytics/general.sass
+++ b/analytics/static/analytics/general.sass
@@ -1,3 +1,5 @@
+$title-color: #009688
+
 .report-body
 	border: 1px solid #3ebeb4
 	border-radius: 20px
@@ -8,7 +10,7 @@
 	height: 10%
 	display: block
 	h3
-		color: #009688
+		color: $title-color
 
 	ul
 		float: right
@@ -41,11 +43,35 @@
 	border-radius: 10px
 	color: #ffffff
 
+.data-container
+	width: 80px
+	height: 40px
+
 .tag-cloud
-	width: 10%
 	border-radius: 25px
 	color: #ffffff
+	width: 80px
+
 	
 
 .tag-name
 	color: #ffffff
+	font-size: 10px
+
+
+#left-data-selector
+	background: linear-gradient( #0e8999, #6bf0ce )
+	width: 30%
+
+
+.middle-chart
+	width: 30%
+	float: left
+	h4
+		color: $title-color
+
+.right-chart
+	width: 30%
+	float: left
+	h4
+		color: $title-color
