--- a/analytics/static/analytics/general.sass
+++ b/analytics/static/analytics/general.sass
@@ -73,3 +73,15 @@ $title-color: #009688
     float: left
     h4
         color: $title-color
+
+.selector
+    width: 80%
+    height: 40px
+    color: white
+    padding-left: 5px
+    background-color: #009688
+    margin-top: 10px
+    border-radius: 0px 20px 20px 0px
+    p
+        padding-top: 10px
+        font-size: 16px
