improved styling as well as displaying most active users as well as most accessed subjects

--- a/analytics/templates/analytics/general.html
+++ b/analytics/templates/analytics/general.html
@@ -72,7 +72,7 @@
 
                     <div id="left-data-selector">
                       
-                                <div class="selector">
+                                <div class="selector" data-url="categories">
                                     <p>  {% trans "most accessed categories" %} </p>
                                 </div>
                           
@@ -80,7 +80,7 @@
                                    <p> {% trans "most accessed subjects" %} </p>
                                 </div>
                            
-                                <div class="selector">
+                                <div class="selector" data-url="resources">
                                    <p> {% trans "most accessed resource" %} </p>
                                 </div>
                          
@@ -91,6 +91,7 @@
                     <article>
                         <h4>{% trans "most active users" %}</h4>
                     </article>
+                  
                 </div>
                 <div class="chart right-chart">
                     
