--- a/analytics/static/analytics/general.css
+++ b/analytics/static/analytics/general.css
@@ -63,8 +63,8 @@
     color: #009688; }
 
 .selector {
-  width: 80%;
-  height: 40px;
+  width: 90%;
+  height: 20%;
   color: white;
   padding-left: 5px;
   background-color: #009688;
@@ -73,5 +73,22 @@
   .selector p {
     padding-top: 10px;
     font-size: 16px; }
+
+.middle-chart article {
+  text-align: center; }
+
+.most-accessed-list {
+  background-color: #52b7bd;
+  width: 80%;
+  margin-left: 2%;
+  margin-top: 2%;
+  padding-left: 0;
+  color: white;
+  transition: width 2s, height 2s, background-color 2s, transform 2s; }
+  .most-accessed-list li {
+    padding-left: 1%; }
+
+.most-accessed-item:hover {
+  background-color: #3aa7ad; }
 
 /*# sourceMappingURL=general.css.map */
