--- a/analytics/static/analytics/general.sass
+++ b/analytics/static/analytics/general.sass
@@ -75,8 +75,8 @@ $title-color: #009688
         color: $title-color
 
 .selector
-    width: 80%
-    height: 40px
+    width: 90%
+    height: 20%
     color: white
     padding-left: 5px
     background-color: #009688
@@ -85,3 +85,23 @@ $title-color: #009688
     p
         padding-top: 10px
         font-size: 16px
+
+ 
+.middle-chart
+    article
+        text-align: center
+
+.most-accessed-list
+    background-color: #52b7bd
+    width: 80%
+    margin-left: 2%
+    margin-top: 2%
+    padding-left: 0
+    color: white
+    transition: width 2s, height 2s, background-color 2s, transform 2s
+
+    li
+        padding-left: 1%
+
+.most-accessed-item:hover 
+    background-color: #3aa7ad
