--- a/analytics/static/analytics/general.sass
+++ b/analytics/static/analytics/general.sass
@@ -91,6 +91,12 @@ $title-color: #009688
     article
         text-align: center
 
+.user-tooltip
+    background: linear-gradient( #0e8999, #6bf0ce)
+    color: white
+    border-radius: 10px
+    padding: 7px
+
 .most-accessed-list
     background-color: #52b7bd
     width: 80%
